--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-notification": "^5.0.5",
     "sass": "^0.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
